hphp/hack/test/typecheck/abstract_typeconsts/redeclare_no_default2.php
<?hh

abstract class A {
  abstract const type T as mixed = arraykey;
}

abstract class B extends A {
  abstract const type T as string;
}

abstract class C extends B {}

final class D extends C {}
